// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active tab 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#fff",
      "borderBottomWidth": 2,
      "flex": 1,
      "height": 40,
      "opacity": 1,
      "paddingVertical": 11,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontWeight": "600",
        "textAlign": "center",
      }
    }
  >
    Женские имена
  </Text>
</View>
`;

exports[`renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#000",
      "borderBottomWidth": 2,
      "flex": 1,
      "height": 40,
      "opacity": 1,
      "paddingVertical": 11,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontWeight": "600",
        "textAlign": "center",
      }
    }
  >
    Женские имена
  </Text>
</View>
`;
